[package]
name = "secp256k1_zkp"
version = "0.1.0"
authors = ["Jonas Nick <jonasd.nick@gmail.com>"]

license = "CC0-1.0"
homepage = "https://github.com/ElementsProject/rust-secp256k1-zkp/"
repository = "https://github.com/ElementsProject/rust-secp256k1-zkp/"
description = "Rust bindings for Pieter Wuille's `libsecp256k1` library. Implements ECDSA for the SECG elliptic curve group secp256k1-zkp and related utilities."
keywords = [ "crypto", "ECDSA", "Schnorr", "secp256k1", "libsecp256k1", "secp256k1-zkp", "libsecp256k1-zkp", "bitcoin" ]
readme = "README.md"
build = "build.rs"

[build-dependencies]
cc = "=1.0.26"


[lib]
name = "secp256k1_zkp"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.6"

[dependencies]
secp256k1 = "0.12"
